Scout minor changes (#6220)